# warm-v

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
scripts/: stiching.bash  stitching_custom.bash  stitching_detailed.bash
src/: stitching.cpp  stitching_custom.cpp  stitching_detailed.cpp
